finished url validation and x

--- a/popup.html
+++ b/popup.html
@@ -58,14 +58,28 @@
 			background-color: #F5F7FC;
 			width: 300px;
 			margin: auto;
+			position: relative;
 		}
 
-		#
+		.xButton {
+			position: absolute;
+			background-color: brown;
+			border: 1px solid brown;
+			border-radius: 3px;
+			right: 20px;
+			height: 20px;
+			width: 20px;
+			text-align: center;
+			font-family: Avenir;
+			font-weight: 700;
+		}
 
 
 	</style>
 	<script   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
 	<script type="text/javascript" src="main.js"></script>
+	<script type="text/javascript" src="site.js"></script>
+	<script type="text/javascript" src="timer.js"></script>
 </head>
 <body>
 
