--- a/popup.html
+++ b/popup.html
@@ -3,20 +3,6 @@
 <head>
 	<title>Opens Pomodoro Timer</title>
 	<style type="text/css">
-		#timer {
-			background-color: black;
-			height: 30px;
-			width: 150px;
-			border-radius: 5px;
-			border: solid red 2px;
-			color: red;
-			font-weight: bold;
-			font-size: 25px;
-			font-family: Verdana;
-			text-align: center;
-			margin: auto;
-			padding: 5px;
-		}
 
 		body {
 			text-align: center;
@@ -32,8 +18,6 @@
 			width: 200px;
 			border: 1px solid maroon;
 			border-radius: 2px;
-/*			float: left;
-			margin-left: 30px;*/
 		}
 
 		#timerButton {
@@ -43,13 +27,32 @@
 			font-size: 15pt;
 			font-family: Futura;
 			font-weight: 500;
+			margin: auto;
+			margin-bottom: 10px;
+		}
+
+		#startBreak {
+			margin-bottom: 10px;
+			width: 200px;
+			border: 3px solid red;
+			border-radius: 3px;
+			font-size: 15pt;
+			font-family: Futura;
+			font-weight: 500;
 		}
 
 		#siteContainer {
-			margin: -30px 0px 80px 0px;
+			margin: 0px 0px 20px 0px;
 			font-family: Garamond;
 			font-size: 14pt;
 			font-weight: 200;
+		}
+
+		#wrench {
+			width: 15px;
+			height: 15px;
+			background-image: url("settings.png");
+			background-size: 100%;
 		}
 
 		.enteredSite {
@@ -76,10 +79,14 @@
 
 
 	</style>
-	<script   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
+
+	<script src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
 	<script type="text/javascript" src="main.js"></script>
 	<script type="text/javascript" src="site.js"></script>
-	<script type="text/javascript" src="timer.js"></script>
+	<script type="text/javascript" src="background.js"></script>
+	<script type="text/javascript" src="popup2.js"></script>
+	<link href="lib/bootstrap.min.css" rel="stylesheet" media="screen">
+
 </head>
 <body>
 
@@ -91,11 +98,50 @@
 </div>
 
 
-<button id ="timerButton" type="submit" align="center"">Start Working!</button>
+<button id="timerButton" type="submit" align="center">Start Working!</button>
+<button id="startBreak" class="submit" align="center">Start Break!</button>
+				<div id="display" class="row-fluid">
+            <div class="span12">
+                <div class="progress progress-striped active progress-success progress-large">
+                    <div class="bar" id="bar" style="width: 100%;"></div>
+                </div>
+            </div>
+        </div>
+
+        <div id="modify" class="row-fluid">
+            <div class="span12">
+								<button id="cancel" class="submit" align="center">Cancel</button>
+								<button id="resume" class="submit" align="center">Resume</button>
+								<button id="pause" class="submit" align="center">Pause</button>
+            </div>
+        </div>
+
+				<button id="wrench" class="submit" align="center"></button>
+        <div id="settings" class="row-fluid">
+            <div class="span12">
+                <form class="well" name="choices">
+                    <div class="radio">
+                        <input type="radio" name="radio" value="0" checked="checked">
+                        <span id="s0">15</span>&nbsp;min</div>
+
+                    <div class="radio">
+                        <input type="radio" name="radio" value="1">
+                        <span id="s1">30</span>&nbsp;min</div>
+
+                    <div class="radio">
+                        <input type="radio" name="radio" value="2">
+                        <span id="s2">45</span>&nbsp;min</div>
+
+                    <div class="radio">
+                        <input type="radio" name="radio" value="3">
+                        <span id="s3">60</span>&nbsp;min</div>
+
+                    <div>&nbsp;</div>
+                </form>
+            </div>
+        </div>
+
 <br/><br/>
-<div id="timer">
-	25:00
-</div>
 
 
 </body>
