--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Opens Pomodoro Timer</title>
+	<title>Pomodoro Timer</title>
 	<style type="text/css">
 
 		body {
@@ -107,10 +107,8 @@
 
 
 	</style>
-
 	<script   src="jquery-2.2.4.min.js"></script>
 	<script type="text/javascript" src="main.js"></script>
-	<script type="text/javascript" src="site.js"></script>
 	<script type="text/javascript" src="background.js"></script>
 	<script type="text/javascript" src="popup2.js"></script>
 	<link href="lib/bootstrap.min.css" rel="stylesheet" media="screen">
