--- a/popup.html
+++ b/popup.html
@@ -26,22 +26,7 @@
 			width: 200px;
 			border: 1px solid maroon;
 			border-radius: 2px;
-			margin-bottom: 10px;
-		}
-
-		#sendButton {
-			margin-right: 30px;
-			float: right;
-			background-color: black;
-			border: 1px solid black;
-			color: white;
-			border-radius: 3px;
-			right: 20px;
-			height: 20px;
-			width: 60px;
-			text-align: center;
-			font-family: Avenir;
-			font-weight: 700;
+			margin: 0 50px 10px 50px;
 		}
 
 		#timerButton {
@@ -126,7 +111,7 @@
 </div>
 
 
-<button id="timerButton" type="submit" align="center">Start Working!</button>
+<button id="timerButton" type="submit" align="center" disabled="true">Start Working!</button>
 <button id="startBreak" class="submit" align="center">Start Break!</button>
 				<div id="display" class="row-fluid">
             <div class="span12">
@@ -138,7 +123,7 @@
 
         <div id="modify" class="row-fluid">
             <div class="span12">
-								<button id="cancel" class="submit" align="center">Cancel</button>
+								<button id="cancel" class="submit" align="center">Give Up</button>
 								<button id="resume" class="submit" align="center">Resume</button>
 								<button id="pause" class="submit" align="center">Pause</button>
             </div>
