changed default time

--- a/popup.html
+++ b/popup.html
@@ -154,7 +154,7 @@
 												<input type="radio" name="radio" value="0" checked="checked">
 												<span id="s0">1</span>&nbsp;min</div>
                     <div class="radio">
-                        <input type="radio" name="radio" value="1" checked="checked">
+                        <input type="radio" name="radio" value="1">
                         <span id="s1">15</span>&nbsp;min</div>
 
                     <div class="radio">
