--- a/popup.html
+++ b/popup.html
@@ -133,11 +133,11 @@
         <div id="settings" class="row-fluid">
             <div class="span12">
                 <form class="well" name="choices">
-										<div class="radio">
-												<input type="radio" name="radio" value="0" checked="checked">
-												<span id="s0">1</span>&nbsp;min</div>
+					<div class="radio">
+						<input type="radio" name="radio" value="0" checked="checked">
+						<span id="s0">1</span>&nbsp;min</div>
                     <div class="radio">
-                        <input type="radio" name="radio" value="1" checked="checked">
+                        <input type="radio" name="radio" value="1">
                         <span id="s1">15</span>&nbsp;min</div>
 
                     <div class="radio">
