--- a/popup.html
+++ b/popup.html
@@ -4,8 +4,8 @@
 	<title>Pomodoro Timer</title>
 	<link rel="stylesheet" href="index.css">
 	<style type="text/css">
-		
-		
+
+
 
 		body {
 			text-align: center;
@@ -94,7 +94,7 @@
 			font-weight: 700;
 		}
 
-		
+
 
 		#timeSettings{
 			width:27%;
@@ -115,7 +115,7 @@
 		.bolded{
 			font-weight: 700;
 		}
-		
+
 		#timeForm{
 			padding: 10px;
 		}
@@ -160,6 +160,7 @@
 	</style>
 	<script type="text/javascript" src="jquery-2.2.4.min.js"></script>
 	<script type="text/javascript" src="howler.min.js"></script>
+	<script type="text/javascript" src="extension.js"></script>
 	<script type="text/javascript" src="main.js"></script>
 	<script type="text/javascript" src="background.js"></script>
 	<script type="text/javascript" src="popup.js"></script>
@@ -230,7 +231,7 @@
             </div>
             <div id="musicSettings">
             	<h4>Music Preferences</h4>
-            	
+
 				<form class="well" id="studyForm" name="studyChoices">
 				<span class ="bolded">Study</span>
 					<div class="radio">
@@ -244,7 +245,7 @@
                         <input type="radio" name="radio" value="2">
                         <span id="classicalMusic">Classical Music</span></div>
 				</form>
-				
+
 				<form class="well" id="breakForm" name="breakChoices">
 				<span class ="bolded">Break</span>
                     <div class="radio">
